# OS_final

./: CMakeLists.txt  main.cpp
src/controller/: FileExplorer.cpp  FileExplorer.h  FileManager.cpp  FileManager.h  HardDiskManager.cpp  HardDiskManager.h
src/model/: Block.h  FCB.h  Folder.h
test/: HardDiskTest.cpp
